--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,9 +16,11 @@
                     The new collections are here
                 </h1>
             </div>
+                <div class="my-5">
                 <h4>
-                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now </a>
-                </h4>                  
+                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now </a>
+                </h4>
+                </div>                  
             </div>
         </div>
     </div>
